--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,29 @@
+body {
+  font-family: 'Capriola', sans-serif;
+}
 header {
   display: flex;
   background-color: #d4707a;
+  color: white;
 }
 main {
   display: flex;
   justify-content: center;
+  margin-top: 60px;
+  margin-bottom: 30px;
 }
-#div-inicio-partida {
+a {
+  color: white;
+  text-decoration: none;
+}
+#div-start-match {
   display: flex;
   justify-content: center;
 }
 .header-item {
   display: flex;
   align-items: center;
+  margin: 0px 20px;
 }
 .cell {
   display: flex;
@@ -26,4 +37,30 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.light {
+  background-color: whitesmoke;
+}
+.dark {
+  background-color: black;
+}
+.piece-team-dark {
+  background-color: darkgray;
+  height: 58px;
+  width: 58px;
+  border-radius: 50%;
+}
+.piece-team-light {
+  background-color: rgb(179, 19, 19);
+  height: 58px;
+  width: 58px;
+  border-radius: 50%;
+}
+#start-match {
+  color: white;
+  font-size: 22px;
+  background-color: #3d94d1;
+  border-radius: 10px;
+  width: 225px;
+  height: 50px;
 }
